--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="error">
         <div>
-            <p> Я не доступен без специального кода</p>
+            <p> Я не доступен без ключа</p>
             <br> :3
         </div>
     </div>
@@ -39,7 +39,7 @@
         </div>
     </center>
 
-    <script src="http://cosmic.mearie.org/2011/01/qrjs/qr.js"></script>
+    <script src="qr.js"></script>
     <script src="script.js"></script>
 </body>
 
