--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css" />
-    <title>Document</title>
+    <title>RSP</title>
 </head>
 
 <body>
@@ -24,13 +24,6 @@
 
 
     </div>
-
-
-    <div class="is_eval">
-        <div class="eval" style="margin-left: 8px;">Ч</div>
-        <div class="" style="margin-left: 5px;">НЧ</div>
-    </div>
-
 
     <button style="width: 100%; height: 30px; opacity: 0;" onclick="AddQR()"></button>
     <center>
