--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css" />
+    <link rel="stylesheet" href="scripts/tools.js">
     <title>RSP</title>
 </head>
 
@@ -25,15 +26,7 @@
 
     </div>
 
-    <button style="width: 100%; height: 30px; opacity: 0;" onclick="AddQR()"></button>
-    <center>
-        <div class="qrCodeOutput">
-
-        </div>
-    </center>
-
-    <script src="qr.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
