--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css" />
-    <link rel="stylesheet" href="scripts/tools.js">
+    <script src="scripts/tools.js"></script>
     <title>RSP</title>
 </head>
 
