--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css" />
+    <link type="image/x-icon" href="/favicon.png" rel="shortcut icon">
+    <link type="Image/x-icon" href="/favicon.png" rel="icon">
     <script src="scripts/tools.js"></script>
     <title>RSP</title>
 </head>
