--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css" />
     <link type="image/x-icon" href="/favicon.ico" rel="shortcut icon">
-    <link type="Image/x-icon" href="/favicon.ico" rel="icon">
+    <link type="image/x-icon" href="/favicon.ico" rel="icon">
+
     <script src="scripts/tools.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-92GKDS09YR"></script>
@@ -33,7 +34,9 @@
         </div>
     </div>
     <div class="main_table">
+        <div class="table">
 
+        </div>
     </div>
 
     <script src="scripts/script.js"></script>
