--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css" />
-    <link type="image/x-icon" href="/favicon.ico" rel="shortcut icon">
-    <link type="image/x-icon" href="/favicon.ico" rel="icon">
+    <link type="image/x-icon" href="/Img/favicon.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="/Img/favicon.ico" rel="icon">
 
     <script src="scripts/tools.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
